k8s/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby
  template:
    metadata:
      labels:
        app: ruby
    spec:
      containers:
      - name: rubyapp
        image: teamcloudyuga/railsmyapp:v1
        ports:
        - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: ruby-svc
  labels:
    app: ruby
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
  selector:
    app: ruby
