k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ruby-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cy.myrubyapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ruby-svc
          servicePort: 80
